--- a/src/components/HelpFab.css
+++ b/src/components/HelpFab.css
@@ -16,7 +16,7 @@
 
 .help-fab {
   position: fixed;
-  bottom: 76px;
+  bottom: calc(76px + env(safe-area-inset-bottom, 0px));
   right: 16px;
   width: 44px;
   height: 44px;
